# projectBuild

./: README.md
src/makefile/: readme.md
src/makefile/xserver/src/: makefile  makefile.mk  test.mk
src/makefile/xserver/src/first_make/: .depend  first_make  first_make.cpp  makefile  makefile.mk  test  xdata.cpp  xdata.h
src/makefile/xserver/src/test_gcc/: test.h  test_gcc.cpp
src/makefile/xserver/src/test_include/: makefile  test_include  test_include.cpp  testc.c  testcpp.cc
src/makefile/xserver/src/test_install/: makefile  start_test_install  stop_test_install  test_install.cpp
src/makefile/xserver/src/test_make_func/: main.cpp  makefile  test.cpp  test_make_func  xdata.cpp  xdata.h
src/makefile/xserver/src/xcom/: .depend  makefile  xcom.cpp  xcom.h
src/makefile/xserver/src/xserver/: .depend  makefile  run  start_xserver  stop_xserver  xserver  xserver.cpp
src/makefile/xserver/src/xthread/: .depend  makefile  xthread.cpp  xthread.h
src/vsc-cmake-build/: .gitignore  CMakeLists.txt  issue_recond.md  main.cpp
